Grease pencil layers are not scene-specific for "full-copy scenes #42549

Closed
opened 2014-11-09 13:33:43 +01:00 by Jason van Gumster · 9 comments

System Information
Arch Linux

Blender Version
Broken: GPencil_EditStrokes branch (as of 4c54390), self-built

Short description of error
If you have a grease pencil layer and you create a new scene using Full Copy, the second scene doesn't use a new copy of that layer. Instead it points to the original grease pencil layer. The effect of this is that any edits to that grease pencil layer, including animation, shows up in both scenes. There doesn't seem to be a way to make the grease pencil layer single user for that scene (the button is there, it just doesn't work).

Exact steps for others to reproduce the error

  1. Create grease pencil layer in default scene.
  2. Draw grease pencil strokes
  3. Create a new scene with Full Copy
  4. Edit/delete grease pencil strokes
  5. Switch back to the first scene and notice that your edits are there, too.
**System Information** Arch Linux **Blender Version** Broken: GPencil_EditStrokes branch (as of 4c54390), self-built **Short description of error** If you have a grease pencil layer and you create a new scene using Full Copy, the second scene doesn't use a new copy of that layer. Instead it points to the original grease pencil layer. The effect of this is that any edits to that grease pencil layer, including animation, shows up in both scenes. There doesn't seem to be a way to make the grease pencil layer single user for that scene (the button is there, it just doesn't work). **Exact steps for others to reproduce the error** 1. Create grease pencil layer in default scene. 2. Draw grease pencil strokes 3. Create a new scene with Full Copy 4. Edit/delete grease pencil strokes 5. Switch back to the first scene and notice that your edits are there, too.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Joshua Leung was assigned by Jason van Gumster 2014-11-09 13:33:43 +01:00
Author
Member

Added subscriber: @JasonvanGumster

Added subscriber: @JasonvanGumster
Member

NOTE: Will be fixed in Strokes Editing branch

Todos:

  1. Fix up BKE_scene_copy() to make changes to GP Datablocks

    • Increment ref count if not copying
    • Hook up to a new datablock if copying
  2. Fix up the GP datablock copying code in gpencil.c - This is actually dangerous code, since it doesn't work well if there are multiple users of a GP datablock, OR if the datablock has ID props

NOTE: Will be fixed in Strokes Editing branch Todos: 1) Fix up BKE_scene_copy() to make changes to GP Datablocks - Increment ref count if not copying - Hook up to a new datablock if copying 2) Fix up the GP datablock copying code in gpencil.c - This is actually dangerous code, since it doesn't work well if there are multiple users of a GP datablock, OR if the datablock has ID props
Member

Oops - As a little dev note for future reference, I just found out that the datablock duplicate code is now used for undo too, which puts a bit of a spanner into the works for the above plan!

Oops - As a little dev note for future reference, I just found out that the datablock duplicate code is now used for undo too, which puts a bit of a spanner into the works for the above plan!

This issue was referenced by f425de9341

This issue was referenced by f425de9341753addf39b12aac9ba16c6cba4f7ee
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit f425de9341.

Closed by commit f425de9341.

This issue was referenced by 4a55637a0da4257072f2182c1955af9dbfb78657

This issue was referenced by 4a55637a0da4257072f2182c1955af9dbfb78657

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42549
No description provided.