Bugfix T42549: Grease pencil layers are not scene-specific for "full copy scenes"